--- a/.render.yaml
+++ b/.render.yaml
@@ -5,3 +5,6 @@ services:
     buildCommand: ""
     startCommand: "python app.py"
     plan: free
+buildCommand: |
+  pip install -r requirements.txt
+  python -m playwright install
